--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,20 @@
 <resources>
     <string name="app_name">ChatChat</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="chat_chat">Chat Chat</string>
+    <string name="log_in">Log In</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="enter_email_mobile_user_name">Enter Email/Mobile/User Name</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="new_here_sign_up">New Here? Sign Up</string>
+    <string name="email">Email</string>
+    <string name="user_name">User Name</string>
+    <string name="mobile_no">Mobile No</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
+    <string name="profile_picture">Profile Picture</string>
 </resources>
