--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,5 @@
     <string name="gallery_permission_denied">Gallery permission denied</string>
     <string name="no_image_found">No image found</string>
     <string name="sign_up_failed">Sign Up failed. Try Again.</string>
-
+    <string name="log_in_failed">Log In failed. Try Again.</string>
 </resources>
