--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,8 @@
     <string name="camera_permission_denied">Camera permission denied, go to Settings->Permissions</string>
     <string name="gallery_permission_denied">Gallery permission denied, go to Settings->Permissions</string>
     <string name="no_image_found">No image found</string>
-    <string name="sign_up_failed">Sign Up failed. Try again.</string>
+    <string name="sign_up_failed">Sign Up failed.</string>
+    <string name="try_again">Try again.</string>
     <string name="log_in_failed">Log In failed. Try again.</string>
     <string name="image_file_error">Image file does not exists or file can\'t be read</string>
 </resources>
