--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,8 @@
     <string name="try_again">Try again.</string>
     <string name="log_in_failed">Log In failed.</string>
     <string name="image_file_error">Image file does not exists or file can\'t be read</string>
+    <string name="chats">Chats</string>
+    <string name="active_friends">Active Friends</string>
+    <string name="friends">Friends</string>
+    <string name="time">Time</string>
 </resources>
