--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,12 @@
     <string name="active_friends">Active Friends</string>
     <string name="friends">Friends</string>
     <string name="time">Time</string>
+    <string name="send_message">Send Message</string>
+    <string name="send_request">Send Request</string>
+    <string name="friends_status">Friend Status</string>
+    <string name="mutual_friends">Mutual Friends</string>
+    <string name="friend_requests">Friend Requests</string>
+    <string name="sent_requests">Sent Requests</string>
+    <string name="add_friends">Add Friends</string>
+    <string name="my_friends">My Friends</string>
 </resources>
